@@ -10,6 +10,7 @@ documents those changes that are of interest to users and admins.
  -- Corrections to scheduling logic for topology/tree in configurations where 
     nodes are configured in multiple leaf switches.
  -- Patch from Matthieu Hautreux for backup mysql deamon support.
+ -- Changed DbdBackup to DbdBackupHost for slurmdbd.conf file
 
 * Changes in SLURM 1.4.0-pre13
 ==============================
